2003-02-02  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_listnum.c (bk_listnum_next): Remove pointer from CLC
	*before* freeing (wild pointer reference -- not really, but this
	is more correct and shuts up insight).

2003-01-31  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bsre_create): Add reference cnt to string
	registry to avoid overfreeing (created wild pointers).

	* include/libbk_oscompat.h (BK_FINISH_FUN): Insure no longer
	chokes on __contructor__ attribute.

	* include/libbk.h (realloc): Redefine realloc() when INSURE is on,
	otherwise you must deal with a multitude of FREE_NULL "errors".

2003-01-23  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_nvmap.c (bk_nvmap_name2value): Type int values to
	u_int64_t so pointers can be held in nvmaps.

2003-01-20  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_exec.c: Update users of tokenization to handle new
	variable expansion arguments

	* lib/b_string.c (bk_string_tokenize_split): Add variable
	expansion (two methods: CLC and environ)

2003-01-09  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_md5.c (bk_MD5Update): Changed inBuf parameter from char *
	to const char *.

	* lib/b_string.c (bk_string_alloc_vsprintf): Added
	bk_string_alloc_vsprintf and changed the implementation of
	bk_string_alloc_sprintf accordingly.

2002-12-30  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_strcode.c (bk_string_str2xml): partial fix for ticket #963:
	always allow whitespace chars, implement entity-encoding correctly,
	and use sizeof rather than strlen
	
2002-12-20  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_fileutils.c: note additional security flaws in this code

2002-11-20  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_NSECTOUSEC, BK_USECTONSEC): avoid overflow,
	perform rounding on nsec->usec conversion

2002-11-20  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_fileutils.c (bk_file_unlock): Change sprintf to snprintf.
